bpo-34217: Use lowercase header for Windows (GH-8453)